Bug 244903 - [JSC] TypedArray can stop [[Prototype]] lookup chain
Summary: [JSC] TypedArray can stop [[Prototype]] lookup chain
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Yusuke Suzuki
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-09-07 12:57 PDT by Yusuke Suzuki
Modified: 2022-09-08 00:09 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yusuke Suzuki 2022-09-07 12:57:50 PDT
...
Comment 1 Yusuke Suzuki 2022-09-07 13:14:59 PDT
Pull request: https://github.com/WebKit/WebKit/pull/4106
Comment 2 EWS 2022-09-08 00:08:08 PDT
Committed 254264@main (db8a1fe47e0e): <https://commits.webkit.org/254264@main>

Reviewed commits have been landed. Closing PR #4106 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2022-09-08 00:09:16 PDT
<rdar://problem/99684652>